--- a/index.html
+++ b/index.html
@@ -466,49 +466,49 @@ involved in several research projects related to geospatial aspects in informati
 			</ul>
 			<h3>MSc Students</h3>
 			<ul>
-			<li>Ricardo Pereira, <a href=""><i>Aplicação da norma OGC-WPS ao registo de informação cadastral</i></a>, IST, 2015 (<i>co-supervised with Prof. Mário Rui Gomes</i>)</li>
-			<li>Nelson Veríssimo, <a href=""><i>Análise de logs de motores de busca</i></a>, IST, 2015 (<i>co-supervised with Prof. Pável Calado</i>)</li>
-			<li>Pedro Medeiros, <a href=""><i>Monitorização e testes de performance em serviços Web geográficos</i></a>, IST, 2015 (<i>co-supervised with Prof. José Borbinha</i>)</li>
-			<li>Ivo Anastácio, <a href=""><i>Publicidade online com suporte ao contexto geográfico</i></a>, IST, 2015 (<i>co-supervised with Prof. Pável Calado</i>)</li>
-			<li>Emanuel Rita, <a href=""><i>Serviços de mapas com suporte à criação de mapas temáticos</i></a>, IST, 2015 (<i>co-supervised with Prof. José Borbinha</i>)</li>
-			<li>André Lucas, <a href=""><i>Recomendação de programas de televisão</i></a>, IST, 2015 (<i>co-supervised with Prof. Andreas Wichert</i>)</li>
-			<li>Ricardo Alves Gonçalves, <a href=""><i>TESEU, Técnologia de pesquisa para a Europeana</i></a>, IST, 2015 (<i>co-supervised with Prof. José Borbinha</i>)</li>
-			<li>Vitor Sequeira, <a href=""><i>Classificação automática e hierarquica de documentos Web</i></a>, IST, 2015 (<i>co-supervised with Prof. Pável Calado</i>)</li>
-			<li>André Soares, <a href=""><i>Desenho e implementação de um gazetteer</i></a>, IST, 2015 (<i>co-supervised with Prof. José Borbinha</i>)</li>
-			<li>Pedro Martins, <a href=""><i>Interfaces para motores de busca com capacidades geo-temporais</i></a>, IST, 2015 (<i>co-supervised with Prof. Manuel Fonseca</i>)</li>
-			<li>Catarina Moreira, <a href=""><i>Pesquisa de peritos com restrições geográficas</i></a>, IST, 2015 (<i>co-supervised with Prof. Pável Calado</i>)</li>
-			<li>Erik Wennberg, <a href=""><i>Extracção e rastreio geo-temporal de tópicos em textos</i></a>, IST, 2015 (<i>co-supervised with Prof. Pável Calado</i>)</li>
-			<li>Diogo Santos, <a href=""><i>Extracção de opiniões/sentimentos desde documentos textuais</i></a>, IST, 2015 (<i>co-supervised with Prof. Pável Calado</i>)</li>
-			<li>Sérgio Soares, <a href=""><i>Extracção de informação biográfica desde documentos textuais</i></a>, IST, 2015 (<i>co-supervised with Prof. Pável Calado</i>)</li>
-			<li>Vitor Loureiro, <a href=""><i>Reconhecimento e desambiguação de expressões temporais em textos</i></a>, IST, 2015 (<i>co-supervised with Prof. Pável Calado</i>)</li>
-			<li>Rui Candeias, <a href=""><i>Associação automática de fotos a documentos com relatos de viagens</i></a>, IST, 2015</li>
-			<li>Ricardo Candeias, <a href=""><i>Extracção de metadados desde artigos científicos</i></a>, IST, 2015 (<i>co-supervised with Prof. Pável Calado</i>)</li>
-			<li>André Nunes, <a href=""><i>Desambiguação de entidades em redes sociais</i></a>, IST, 2015 (<i>co-supervised with Prof. Pável Calado</i>)</li>
-			<li>João Domingos, <a href=""><i>Sistemas de recomendação com restrições geográficas</i></a>, IST, 2015</li>
-			<li>Ana Silva, <a href=""><i>Anotação automática de fotos georreferenciadas</i></a>, IST, 2015 (<i>co-supervised with Prof. Pável Calado</i>)</li>
-			<li>João Vicente, <a href=""><i>Aprendizagem automática para ordenação de resultados em motores de busca</i></a>, IST, 2015 (<i>co-supervised with Prof. Pável Calado</i>)</li>
-			<li>Nelson Gonçalves, <a href=""><i>Detecção de duplicados em bases de dados de nomes de locais</i></a>, IST, 2015 (<i>co-supervised with Prof. Helena Galhardas</i>)</li>
-			<li>Carolina Bento, <a href=""><i>Descoberta de pessoas influentes em redes sociais</i></a>, IST, 2015 (<i>co-supervised with Prof. Pável Calado</i>)</li>
-			<li>Duarte Dias, <a href=""><i>Prospecção de opiniões em textos e análise da sua distribuição geográfica</i></a>, IST, 2015
-			<li>Luís Santos, <a href=""><i>Resolução de referências a nomes de locais em documentos</i></a>, IST, 2015 (<i>co-supervised with Prof. Luísa Coheur</i>)</li>
-			<li>Diogo Simões, <a href=""><i>Limpeza de dados representados em XML através de programas em XQuery</i></a>, IST, 2015 (<i>co-supervised with Prof. Helena Galhardas</i>)</li>
-			<li>Pedro Carloto, <a href=""><i>Extracção de informação desde referências bibliográficas</i></a>, IST, 2015 (<i>co-supervised with Prof. José Borbinha</i>)</li>
-			<li>João Santos, <a href=""><i>Desambiguação de entidades em textos</i></a>, IST, 2015</li>
-			<li>João Pereira, <a href=""><i>Extracção de relações desde documentos de texto</i></a>, IST, 2015 (<i>co-supervised with Prof. Helena Galhardas</i>)</li>
-			<li>António Amaral, <a href=""><i>Identificação de parafrases e aplicações em FAQ retrieval</i></a>, IST, 2015 (<i>co-supervised with Prof. Pável Calado</i>)</li>
-			<li>Cecília Raposo, <a href=""><i>Recomendação de conteúdos textuais no contexto de um sistema para gestão da inovação</i></a>, IST, 2015 (<i>co-supervised with Prof. Pável Calado</i>)</li>
-			<li>Indira Brito, <a href=""><i>Desenvolvimento de modelos de previsão com base em textos</i></a>, IST, 2015</li>
-			<li>Eduardo Cunha, <a href=""><i>Caracterização de regiões urbanas com base em dados de redes sociais baseadas na localização</i></a>, IST, 2015</li>
-			<li>David Forte, <a href=""><i>Geração de redes entre entidades mencionadas em textos</i></a>, IST, 2015</li>
-			<li>Ruben Raposo, <a href=""><i>Classificação de locais em históricos de localização</i></a>, IST, 2015</li>
-			<li>Alfredo Tavares, <a href=""><i>Geocodificação de fotos com base no conteúdo</i></a>, IST, 2015 (<i>co-supervised with Prof. Alfredo Ferreira</i>)</li>
-			<li>Fernando Melo, <a href=""><i>Geocodificação automática de documentos</i></a>, IST, 2015</li>
+			<li>Ricardo Pereira, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-t/dissertacao/2353642250840"><i>Aplicação da norma OGC-WPS ao registo de informação cadastral</i></a>, IST, 2009 (<i>co-supervised with Prof. Mário Rui Gomes</i>)</li>
+			<li>Nelson Veríssimo, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-t/dissertacao/2353642254468"><i>Análise de logs de motores de busca</i></a>, IST, 2009 (<i>co-supervised with Prof. Pável Calado</i>)</li>
+			<li>Pedro Medeiros, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-t/dissertacao/2353642251641"><i>Monitorização e testes de performance em serviços Web geográficos</i></a>, IST, 2009 (<i>co-supervised with Prof. José Borbinha</i>)</li>
+			<li>Ivo Anastácio, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-t/dissertacao/2353642253478"><i>Publicidade online com suporte ao contexto geográfico</i></a>, IST, 2009 (<i>co-supervised with Prof. Pável Calado</i>)</li>
+			<li>Emanuel Rita, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-t/dissertacao/2353642303829"><i>Serviços de mapas com suporte à criação de mapas temáticos</i></a>, IST, 2010 (<i>co-supervised with Prof. José Borbinha</i>)</li>
+			<li>André Lucas, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-t/dissertacao/2353642303234"><i>Recomendação de programas de televisão</i></a>, IST, 2010 (<i>co-supervised with Prof. Andreas Wichert</i>)</li>
+			<li>Ricardo Alves Gonçalves, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-t/dissertacao/2353642303642"><i>TESEU, Técnologia de pesquisa para a Europeana</i></a>, IST, 2010 (<i>co-supervised with Prof. José Borbinha</i>)</li>
+			<li>Vitor Sequeira, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-t/dissertacao/2353642349842"><i>Classificação automática e hierarquica de documentos Web</i></a>, IST, 2011 (<i>co-supervised with Prof. Pável Calado</i>)</li>
+			<li>André Soares, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-t/dissertacao/2353642352841"><i>Desenho e implementação de um gazetteer</i></a>, IST, 2011 (<i>co-supervised with Prof. José Borbinha</i>)</li>
+			<li>Pedro Martins, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-t/dissertacao/2353642369249"><i>Interfaces para motores de busca com capacidades geo-temporais</i></a>, IST, 2011 (<i>co-supervised with Prof. Manuel Fonseca</i>)</li>
+			<li>Catarina Moreira, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-t/dissertacao/2353642370242"><i>Pesquisa de peritos com restrições geográficas</i></a>, IST, 2011 (<i>co-supervised with Prof. Pável Calado</i>)</li>
+			<li>Erik Wennberg, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-t/dissertacao/2353642370245"><i>Extracção e rastreio geo-temporal de tópicos em textos</i></a>, IST, 2011 (<i>co-supervised with Prof. Pável Calado</i>)</li>
+			<li>Diogo Santos, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-t/dissertacao/2353642367046"><i>Extracção de opiniões/sentimentos desde documentos textuais</i></a>, IST, 2011 (<i>co-supervised with Prof. Pável Calado</i>)</li>
+			<li>Sérgio Soares, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-t/dissertacao/2353642366450"><i>Extracção de informação biográfica desde documentos textuais</i></a>, IST, 2011 (<i>co-supervised with Prof. Pável Calado</i>)</li>
+			<li>Vitor Loureiro, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-t/dissertacao/2353642366451"><i>Reconhecimento e desambiguação de expressões temporais em textos</i></a>, IST, 2011 (<i>co-supervised with Prof. Pável Calado</i>)</li>
+			<li>Rui Candeias, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-t/dissertacao/2353642366449"><i>Associação automática de fotos a documentos com relatos de viagens</i></a>, IST, 2011</li>
+			<li>Ricardo Candeias, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-t/dissertacao/2353642367045"><i>Extracção de metadados desde artigos científicos</i></a>, IST, 2011 (<i>co-supervised with Prof. Pável Calado</i>)</li>
+			<li>André Nunes, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-t/dissertacao/2353642366445"><i>Desambiguação de entidades em redes sociais</i></a>, IST, 2011 (<i>co-supervised with Prof. Pável Calado</i>)</li>
+			<li>João Domingos, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-t/dissertacao/2353642399253"><i>Sistemas de recomendação com restrições geográficas</i></a>, IST, 2012</li>
+			<li>Ana Silva, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-t/dissertacao/2353642398044"><i>Anotação automática de fotos georreferenciadas</i></a>, IST, 2012 (<i>co-supervised with Prof. Pável Calado</i>)</li>
+			<li>João Vicente, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-t/dissertacao/2353642399262"><i>Aprendizagem automática para ordenação de resultados em motores de busca</i></a>, IST, 2012 (<i>co-supervised with Prof. Pável Calado</i>)</li>
+			<li>Nelson Gonçalves, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-t/dissertacao/2353642399254"><i>Detecção de duplicados em bases de dados de nomes de locais</i></a>, IST, 2012 (<i>co-supervised with Prof. Helena Galhardas</i>)</li>
+			<li>Carolina Bento, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-t/dissertacao/2353642425845"><i>Descoberta de pessoas influentes em redes sociais</i></a>, IST, 2012 (<i>co-supervised with Prof. Pável Calado</i>)</li>
+			<li>Duarte Dias, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-t/dissertacao/2353642421445"><i>Prospecção de opiniões em textos e análise da sua distribuição geográfica</i></a>, IST, 2012
+			<li>Luís Santos, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-t/dissertacao/2353642425849"><i>Resolução de referências a nomes de locais em documentos</i></a>, IST, 2012 (<i>co-supervised with Prof. Luísa Coheur</i>)</li>
+			<li>Diogo Simões, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-t/dissertacao/2353642448041"><i>Limpeza de dados representados em XML através de programas em XQuery</i></a>, IST, 2013 (<i>co-supervised with Prof. Helena Galhardas</i>)</li>
+			<li>António Pedro Carloto, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-t/dissertacao/2353642450440"><i>Extracção de informação desde referências bibliográficas</i></a>, IST, 2013 (<i>co-supervised with Prof. José Borbinha</i>)</li>
+			<li>João Santos, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-t/dissertacao/2353642465453"><i>Desambiguação de entidades em textos</i></a>, IST, 2013</li>
+			<li>João Pereira, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-t/dissertacao/2353642465070"><i>Extracção de relações desde documentos de texto</i></a>, IST, 2013 (<i>co-supervised with Prof. Helena Galhardas</i>)</li>
+			<li>António Amaral, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-t/dissertacao/2353642465073"><i>Identificação de parafrases e aplicações em FAQ retrieval</i></a>, IST, 2013 (<i>co-supervised with Prof. Pável Calado</i>)</li>
+			<li>Cecília Raposo, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-t/dissertacao/2353642484445"><i>Recomendação de conteúdos textuais no contexto de um sistema para gestão da inovação</i></a>, IST, 2014 (<i>co-supervised with Prof. Pável Calado</i>)</li>
+			<li>Indira Brito, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-t/dissertacao/2353642480448"><i>Desenvolvimento de modelos de previsão com base em textos</i></a>, IST, 2014</li>
+			<li>Eduardo Cunha, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-t/dissertacao/565303595499873"><i>Caracterização de regiões urbanas com base em dados de redes sociais baseadas na localização</i></a>, IST, 2014</li>
+			<li>David Forte, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-t/dissertacao/565303595499872"><i>Geração de redes entre entidades mencionadas em textos</i></a>, IST, 2014</li>
+			<li>Ruben Raposo, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-t/dissertacao/565303595500279"><i>Classificação de locais em históricos de localização</i></a>, IST, 2015</li>
+			<li>Alfredo Tavares, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-t/dissertacao/565303595500053"><i>Geocodificação de fotos com base no conteúdo</i></a>, IST, 2015 (<i>co-supervised with Prof. Alfredo Ferreira</i>)</li>
+			<li>Fernando Melo, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-t/dissertacao/283828618789028"><i>Geocodificação automática de documentos</i></a>, IST, 2015</li>
 			<li>André Leal, <a href=""><i>Reconhecimento e desambiguação de entidades em textos Biomédicos</i></a>, FCUL, 2015 (<i>co-supervised with Prof. Francisco Couto</i>)</li>
 			<li>João Oliveira, <a href=""><i>Análise de Corpora Jornalístico através das Ocorrências de N-Gramas</i></a>, FCUL, 2015 (<i>co-supervised with Prof. Francisco Couto</i>)</li>
-			<li>Rui Maia, <a href=""><i>Contextual Food Recommendation Through Factorization Machines</i</a>>, IST, 2015 (<i>co-supervised with Prof. Pável Calado</i>)</li>
-			<li>Manuel Reis, <a href=""><i>Towards the Study of Human Emotions Through Social Media Contents</i></a>, IST, 2015</li>
-			<li>Ricardo Marques, <a href=""><i>Detecting contradictions in news quotations</i></a>, IST, 2015 (<i>co-supervised with Prof. Pável Calado</i>)</li>
-			<li>Jorge Almeida, <a href=""><i>Personalized Food Recommendation Exploring Content-Based Methods</i></a>, IST, 2015 (<i>co-supervised with Prof. Pável Calado</i>)</li>
+			<li>Rui Maia, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-t/dissertacao/846778572211159"><i>Contextual Food Recommendation Through Factorization Machines</i</a>>, IST, 2015 (<i>co-supervised with Prof. Pável Calado</i>)</li>
+			<li>Manuel Reis, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-t/dissertacao/1972678479052883"><i>Towards the Study of Human Emotions Through Social Media Contents</i></a>, IST, 2015</li>
+			<li>Ricardo Marques, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-t/dissertacao/1128253548920908"><i>Detecting contradictions in news quotations</i></a>, IST, 2015 (<i>co-supervised with Prof. Pável Calado</i>)</li>
+			<li>Jorge Almeida, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-t/dissertacao/565303595500650"><i>Personalized Food Recommendation Exploring Content-Based Methods</i></a>, IST, 2015 (<i>co-supervised with Prof. Pável Calado</i>)</li>
 			<li>Rodrigo Rodrigues, <a href=""><i>Adapting State-of-the-Art Named Entity Recognition and Disambiguation Frameworks for Handling Clinical Text</i></a>, IST, 2015 (<i>co-supervised with Dr. Paulo Zamith Nicola</i>)</li>
 			</ul>
 		</td>
