--- a/index.html
+++ b/index.html
@@ -503,13 +503,13 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Ruben Raposo, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-t/dissertacao/565303595500279"><i>Classificação de locais em históricos de localização</i></a>, IST, 2015</li>
 			<li>Alfredo Tavares, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-t/dissertacao/565303595500053"><i>Geocodificação de fotos com base no conteúdo</i></a>, IST, 2015 (<i>co-supervised with Prof. Alfredo Ferreira</i>)</li>
 			<li>Fernando Melo, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-t/dissertacao/283828618789028"><i>Geocodificação automática de documentos</i></a>, IST, 2015</li>
-			<li>André Leal, <a href=""><i>Reconhecimento e desambiguação de entidades em textos Biomédicos</i></a>, FCUL, 2015 (<i>co-supervised with Prof. Francisco Couto</i>)</li>
-			<li>João Oliveira, <a href=""><i>Análise de Corpora Jornalístico através das Ocorrências de N-Gramas</i></a>, FCUL, 2015 (<i>co-supervised with Prof. Francisco Couto</i>)</li>
+			<li>André Leal, <a href="http://biblioteca.versila.com/12229575/recognition-and-normalization-of-biomedical-entities-within-clinical-notes"><i>Reconhecimento e desambiguação de entidades em textos Biomédicos</i></a>, FCUL, 2015 (<i>co-supervised with Prof. Francisco Couto</i>)</li>
+			<li>João Oliveira, <a href="http://biblioteca.versila.com/12227824/analise-de-corpora-jornalistico-atraves-das-ocorrencias-de-n-gramas"><i>Análise de Corpora Jornalístico através das Ocorrências de N-Gramas</i></a>, FCUL, 2015 (<i>co-supervised with Prof. Francisco Couto</i>)</li>
 			<li>Rui Maia, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-t/dissertacao/846778572211159"><i>Contextual Food Recommendation Through Factorization Machines</i</a>>, IST, 2015 (<i>co-supervised with Prof. Pável Calado</i>)</li>
 			<li>Manuel Reis, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-t/dissertacao/1972678479052883"><i>Towards the Study of Human Emotions Through Social Media Contents</i></a>, IST, 2015</li>
 			<li>Ricardo Marques, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-t/dissertacao/1128253548920908"><i>Detecting contradictions in news quotations</i></a>, IST, 2015 (<i>co-supervised with Prof. Pável Calado</i>)</li>
 			<li>Jorge Almeida, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-t/dissertacao/565303595500650"><i>Personalized Food Recommendation Exploring Content-Based Methods</i></a>, IST, 2015 (<i>co-supervised with Prof. Pável Calado</i>)</li>
-			<li>Rodrigo Rodrigues, <a href=""><i>Adapting State-of-the-Art Named Entity Recognition and Disambiguation Frameworks for Handling Clinical Text</i></a>, IST, 2015 (<i>co-supervised with Dr. Paulo Zamith Nicola</i>)</li>
+			<li>Rodrigo Rodrigues, <a href="https://fenix.tecnico.ulisboa.pt/cursos/mebiom/dissertacao/846778572210581"><i>Adapting State-of-the-Art Named Entity Recognition and Disambiguation Frameworks for Handling Clinical Text</i></a>, IST, 2015 (<i>co-supervised with Dr. Paulo Zamith Nicola</i>)</li>
 			</ul>
 		</td>
     </tr>
