--- a/index.html
+++ b/index.html
@@ -537,6 +537,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="http://www.emnlp2016.net">EMNLP'16</a> |
 						<a href="http://optima.jrc.it/wassa2016/">WASSA'16</a> |
 						<a href="https://wosp.core.ac.uk/jcdl2016/">WOSP'16</a> |
 						<a href="http://www.tpdl2016.org">TPDL’16</a> |
