--- a/index.html
+++ b/index.html
@@ -127,6 +127,11 @@ involved in several research projects related to geospatial aspects in informati
 						<strong>Mathematics Genealogy Project: </strong><a href="http://genealogy.math.ndsu.nodak.edu/id.php?id=132381">132381</a>
 					</td>
 				</tr>
+				<tr>
+					<td>
+						<strong>Academia: </strong><a href="https://lisboa.academia.edu/BrunoMartins">BrunoMartins</a>
+					</td>
+				</tr>
 				<!-- <tr>
 					<td>
 						<strong>FCT: </strong>J027013YZHME
