--- a/index.html
+++ b/index.html
@@ -448,7 +448,8 @@ involved in several research projects related to geospatial aspects in informati
 <li>Knowledge Discovery from Location-Based Social Networks (KD-LBSN - FCT EXPL/EEI-ESS/0427/2013 - Principal Investigator)</li>
 <li>Large-Scale Data Management in Cloud Environments (DATASTORM - FCT EXCL/EEI-ESS/0257/2012)</li>
 <li>Retrieval, Extraction and Aggregation Computing Technology for Integrating and Organizing News (REACTON - FCT UTA-Est/MAI/0006/2009)</li>
-<li>Services for Intelligent Geographical Information Systems  (SInteliGIS - FCT TDC/EIA-EIA/109840/2009 - Principal Investigator)</li>
+<li>Services for Intelligent Geographical Information Systems  (SInteliGIS - FCT PTDC/EIA-EIA/109840/2009 - Principal Investigator)</li>
+<li>Smarter Indexing and Search Schemes (SMARTIES - FCT PTDC/EIA-EIA/115346/2009)</li>
 <li>The European Digital Mathematics Library (EuDML - CIP-ICT-PSP.2009.2.4)</li>
 <li>Discovering our Past World with Digitized Historical Maps (DIGMAP - ECP-2005-CULT-038042)</li>
 <li>Geographic Reasoning for Search Engines (GREASE/GREASE2 - FCT POSI-SRI-47071-2002)</li>
