--- a/index.html
+++ b/index.html
@@ -615,6 +615,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>						
 						<strong>M.Sc. evaluation comittees: </strong>
+						<a href="FCT/UNL">Bruno Candeias</a> |
 						<a href="FCSH">Joana Cruz Diniz</a> |
 						<a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-a/dissertacao/565303595500704">Filipe Carrapeto</a> |
 						<a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-a/dissertacao/1128253548920876">José Correia</a> |
