--- a/index.html
+++ b/index.html
@@ -516,6 +516,7 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Ricardo Marques, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-t/dissertacao/1128253548920908"><i>Detecting contradictions in news quotations</i></a>, IST, 2015 (<i>co-supervised with Prof. Pável Calado</i>)</li>
 			<li>Jorge Almeida, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-t/dissertacao/565303595500650"><i>Personalized Food Recommendation Exploring Content-Based Methods</i></a>, IST, 2015 (<i>co-supervised with Prof. Pável Calado</i>)</li>
 			<li>Rodrigo Rodrigues, <a href="https://fenix.tecnico.ulisboa.pt/cursos/mebiom/dissertacao/846778572210581"><i>Adapting State-of-the-Art Named Entity Recognition and Disambiguation Frameworks for Handling Clinical Text</i></a>, IST, 2015 (<i>co-supervised with Dr. Paulo Zamith Nicola</i>)</li>
+			<li>Vasco Ferreira, <a href=""><i>Using Textual Transcripts of Parliamentary Interventions for Profiling Portuguese Politicians</i></a>, IST, 2016 (<i>co-supervised with Prof. David Matos</i>)</li>
 			</ul>
 		</td>
     </tr>
@@ -543,6 +544,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="https://www.ualberta.ca/~dsaa16/">IEEE DSAA'16 - EnGeoData - Special Session on Environmental and Geo-spatial Data Analytics</a> |
 						<a href="http://sigspatial2016.sigspatial.org">SIGSPATIAL'16</a> |
 						<a href="http://www.emnlp2016.net">EMNLP'16</a> |
 						<a href="http://optima.jrc.it/wassa2016/">WASSA'16</a> |
