--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="Keywords" content="Bruno Martins, Technical University of Lisbon" />
 	<meta name="Description" content="Professor at Instituto Superior Técnico, University of Lisbon, Portugal." />
 	<link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
-	<link rel="stylesheet" type="text/css" media="screen" href="iststyle.css" />
+	<link rel="stylesheet" type="text/css" media="screen" href="iststyle.css" />E
 	<link rel="stylesheet" type="text/css" media="print" href="print.css" />
 </head>
 <body>
@@ -544,7 +544,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
-						<a href="https://www.ualberta.ca/~dsaa16/">IEEE DSAA'16 - EnGeoData - Special Session on Environmental and Geo-spatial Data Analytics</a> |
+						<a href="https://www.ualberta.ca/~dsaa16/">IEEE DSAA'16 - EnGeoData</a> |
 						<a href="http://sigspatial2016.sigspatial.org">SIGSPATIAL'16</a> |
 						<a href="http://www.emnlp2016.net">EMNLP'16</a> |
 						<a href="http://optima.jrc.it/wassa2016/">WASSA'16</a> |
