--- a/index.html
+++ b/index.html
@@ -307,6 +307,8 @@ involved in several research projects related to geospatial aspects in informati
 			<h3>Conference and Workshop Papers</h3>
 
 			<ul>
+<li>Pedro Fialho, Ricardo Marques, Bruno Martins, Luísa Coheur and Paulo Quaresma, <i>Introducing INESC-ID@ASSIN for measuring semantic similarity and recognizing textual entailment</i>, Proceedings of the ASSIN Shared Task at the International Conference on the Computational Processing of Portuguese, 2016</li>
+<li>Tiago Gonçalves, Ana Paula Afonso and Bruno Martins, <i>Why not both? – Combining 2D maps and 3D space-time cubes for human trajectory data visualization</i>, Proceedings of the British Human Computer Interaction Conference, 2016</li>
 <li>Alexey Mazalov, Bruno Martins and David Matos, <i>Spatial Role Labeling with Convolutional Neural Networks</i>, Proceedings of the ACM Workshop on Geographic Information Retrieval, 2015 [<a href="http://dl.acm.org/citation.cfm?id=2837706">PDF</a>]</li>
 <li>Bruno Martins, Francisco J. López-Pellicer and Dirk Ahlers, <i>Expanding the Utility of Geospatial Knowledge Bases by Linking Concepts to WikiText and Polygonal Boundaries</i>, Proceedings of the ACM Workshop on Geographic Information Retrieval, 2015 [<a href="http://dl.acm.org/citation.cfm?id=2837693">PDF</a>]</li>
 <li>Fernando Melo and Bruno Martins, <i>Geocoding Textual Documents Through the Usage of Hierarchical Classifiers</i>, Proceedings of the ACM Workshop on Geographic Information Retrieval, 2015 [<a href="http://dl.acm.org/citation.cfm?id=2837690">PDF</a>]</li>
