--- a/index.html
+++ b/index.html
@@ -619,6 +619,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>						
 						<strong>M.Sc. evaluation comittees: </strong>
+						<a href="">Daniel Baptista</a> |
 						<a href="FCT/UNL">Bruno Candeias</a> |
 						<a href="FCSH">Joana Cruz Diniz</a> |
 						<a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-a/dissertacao/565303595500704">Filipe Carrapeto</a> |
