--- a/index.html
+++ b/index.html
@@ -546,6 +546,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="http://www.geo.uzh.ch/~rsp/gir16/">GIR'16</a> |
 						<a href="https://www.ualberta.ca/~dsaa16/">IEEE DSAA'16 - EnGeoData</a> |
 						<a href="http://sigspatial2016.sigspatial.org">SIGSPATIAL'16</a> |
 						<a href="http://www.emnlp2016.net">EMNLP'16</a> |
