--- a/index.html
+++ b/index.html
@@ -622,6 +622,8 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>						
 						<strong>M.Sc. evaluation comittees: </strong>
+						<a href="">Rita Curado</a> |
+						<a href="">Afonso Silva</a> |
 						<a href="">Daniel Baptista</a> |
 						<a href="FCT/UNL">Bruno Candeias</a> |
 						<a href="FCSH">Joana Cruz Diniz</a> |
