--- a/index.html
+++ b/index.html
@@ -576,6 +576,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Reviewer in international journals: </strong>
+						<a href="http://www.journals.elsevier.com/information-sciences">Information Sciences</a> |
 						<a href="http://journals.plos.org/plosone/">PLOS ONE</a> |
 						<a href="http://www.tandfonline.com/loi/tjss20">Journal of Spatial Science</a> |
 						<a href="http://www.tandfonline.com/loi/tgis20">International Journal of Geographical Information Science</a> |
