--- a/index.html
+++ b/index.html
@@ -517,9 +517,9 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Manuel Reis, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-t/dissertacao/1972678479052883"><i>Towards the Study of Human Emotions Through Social Media Contents</i></a>, IST, 2015</li>
 			<li>Ricardo Marques, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-t/dissertacao/1128253548920908"><i>Detecting contradictions in news quotations</i></a>, IST, 2015 (<i>co-supervised with Prof. Pável Calado</i>)</li>
 			<li>Jorge Almeida, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-t/dissertacao/565303595500650"><i>Personalized Food Recommendation Exploring Content-Based Methods</i></a>, IST, 2015 (<i>co-supervised with Prof. Pável Calado</i>)</li>
-			<li>Rodrigo Rodrigues, <a href="https://fenix.tecnico.ulisboa.pt/cursos/mebiom/dissertacao/846778572210581"><i>Adapting State-of-the-Art Named Entity Recognition and Disambiguation Frameworks for Handling Clinical Text</i></a>, IST, 2015 (<i>co-supervised with Dr. Paulo Zamith Nicola</i>)</li>
-			<li>Vasco Ferreira, <a href=""><i>Using Textual Transcripts of Parliamentary Interventions for Profiling Portuguese Politicians</i></a>, IST, 2016 (<i>co-supervised with Prof. David Matos</i>)</li>
-			<li>Joana Rocha, <a href=""><i>Resolving Named Entities and Relations in Text for Applications in Literary Studies</i></a>, IST, 2016 (<i>co-supervised with Prof. Pável Calado</i>)</li>
+			<li>Rodrigo Rodrigues, <a href="https://fenix.tecnico.ulisboa.pt/cursos/mebiom/dissertacao/846778572210581"><i>Adapting State-of-the-Art Named Entity Recognition and Disambiguation Frameworks for Handling Clinical Text</i></a>, IST, 2015 (<i>co-supervised with Dr. Paulo Zamith Nicola</i>)</li> <!-- 17 valores -->
+			<li>Vasco Ferreira, <a href=""><i>Using Textual Transcripts of Parliamentary Interventions for Profiling Portuguese Politicians</i></a>, IST, 2016 (<i>co-supervised with Prof. David Matos</i>)</li> <!-- 16 valores -->
+			<li>Joana Rocha, <a href=""><i>Resolving Named Entities and Relations in Text for Applications in Literary Studies</i></a>, IST, 2016 (<i>co-supervised with Prof. Pável Calado</i>)</li> <!-- 17 valores -->
 			</ul>
 		</td>
     </tr>
