--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<title>Bruno Martins | Instituto Superior Técnico, University of Lisbon</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
@@ -295,7 +295,7 @@ involved in several research projects related to geospatial aspects in informati
 			<h3>International Journal Papers</h3>
 
 			<ul>
-<li>Fernando Melo and Bruno Martins, <i>Automated Geocoding of Textual Documents: A Survey of Current Approaches</i>, Transactions in GIS, 2016</li>
+<li>Fernando Melo and Bruno Martins, <i>Automated Geocoding of Textual Documents: A Survey of Current Approaches</i>, Transactions in GIS, 2016 [<a href="http://onlinelibrary.wiley.com/doi/10.1111/tgis.12212/full">PDF</a>]</li>
 <li>Tiago Gonçalves, Ana Paula Afonso and Bruno Martins, <i>Cartographic Visualization of Human Trajectory Data: Overview and Analysis</i>, Journal of Location Based Services, vol. 9, no. 2, 2015 [<a href="http://www.tandfonline.com/doi/full/10.1080/17489725.2015.1074736">PDF</a>]</li>
 <li>João Santos, Ivo Anastácio and Bruno Martins, <i>Desambiguação de Entidades Mencionadas em Textos na Língua Portuguesa ou Espanhola</i>, IEEE Latin America, vol. 13, no. 3, 2015 [<a href="http://www.revistaieeela.pea.usp.br/issues/vol13issue3March2015/42Santos.htm">PDF</a>]</li>
 <li>Catarina Moreira, Pável Calado and Bruno Martins, <i>Learning to Rank Academic Experts in the DBLP Dataset</i>, Expert Systems, vol. 32, no. 4, 2015 [<a href="http://onlinelibrary.wiley.com/doi/10.1111/exsy.12062/abstract">PDF</a>]</li>
