--- a/index.html
+++ b/index.html
@@ -576,11 +576,13 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Reviewer in international journals: </strong>
+						<a href="http://www.tandfonline.com/toc/tjde20/current">International Journal of Digital Earth</a> | 
 						<a href="http://www.journals.elsevier.com/pervasive-and-mobile-computing">Pervasive and Mobile Computing</a> | 
 						<a href="http://www.journals.elsevier.com/information-sciences">Information Sciences</a> |
 						<a href="http://journals.plos.org/plosone/">PLOS ONE</a> |
 						<a href="http://www.tandfonline.com/loi/tjss20">Journal of Spatial Science</a> |
 						<a href="http://www.tandfonline.com/loi/tgis20">International Journal of Geographical Information Science</a> |
+						<a href="http://www.sciencedomain.org/journal/6">British Journal of Mathematics & Computer Science</a> | 						
 						<a href="http://www.mdpi.com/journal/entropy">Entropy</a> |
 						<a href="http://www.mdpi.com/journal/ijgi">ISPRS International Journal of Geo-Information</a> |
 						<a href="http://tsas.acm.org">ACM Transactions on Spatial Algorithms and Systems</a> |
