--- a/index.html
+++ b/index.html
@@ -462,14 +462,18 @@ involved in several research projects related to geospatial aspects in informati
 
     <tr>
 		<td>
-			<h2><a name="students">Students</a></h2>
+			<h2><a name="students">Supervision of Students</a></h2>
 		</td>
     </tr>
     <tr>
 		<td>
+			<h3>Postdoctoral Researchers</h3>
+			<ul>
+			<li>Miguel Won, <i>Analysing Political Discourse Through Text Mining Methods</i>, INESC-ID (<i>ongoing co-supervision with Prof. Pedro Magahães</i>)</li>
+			</ul>
 			<h3>PhD Students</h3>
 			<ul>
-			<li>Tiago Gonçalves, <i> Visual Analysis of Human Mobility Data</i>, FCUL (<i>ongoing co-supervision with Prof. Ana Paula Afonso</i>)</li>
+			<li>Tiago Gonçalves, <i>Visual Analysis of Human Mobility Data</i>, FCUL (<i>ongoing co-supervision with Prof. Ana Paula Afonso</i>)</li>
 			<li>Miguel Costa, <i>Summarizing News Articles</i>, IST (<i>ongoing</i>)</li> 
 			</ul>
 			<h3>MSc Students</h3>
