--- a/index.html
+++ b/index.html
@@ -209,8 +209,13 @@ involved in several research projects related to geospatial aspects in informati
 	</tr>
     	<tr>
 		<td>
+			2015-2017 | <a href="">Data Administration in Information Systems</a> (IST,MEIC)<br/>
+			2016-2017 | <a href="">Information Systems and Databases</a> (IST,MEEC/MEBiom)<br/>
+			2016-2017 | <a href="">Information Processing and Retrieval</a> (IST,MEIC/METI)<br/>
+			2016/2017 | <a href="">Information Retrieval</a> (IST,DEIC)<br/>
+			2016/2017 | <a href="">Research Topics</a> (IST,DEIC)<br/>
 			2015-2016 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/SIBD51113/2015-2016/2-semestre">Information Systems and Databases</a> (IST,LEGI)<br/>
-			2015-2016 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/AOBD101113/2015-2016/2-semestre">Data Administration in Information Systems</a> (IST,MEIC)<br/>
+			2015-2016 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/AOBD101113/2015-2016/2-semestre">Data Administration in Information Systems</a> (IST,MEIC/METI)<br/>
 			2015-2016 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/TInv/2015-2016/1-semestre">Research Topics</a> (IST,DEIC)<br/>
 			2014/2015 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/RGI25/2014-2015/1-semestre">Information Processing and Retrieval</a> (IST,MEIC)<br/>
 			2014/2015 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/BD8/2014-2015/1-semestre">Databases</a> (IST,LEIC,LERC)<br/>
