--- a/index.html
+++ b/index.html
@@ -585,6 +585,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Reviewer in international journals: </strong>
+						<a href="http://toit.acm.org">ACM Transactions on Internet Technology</a>
 						<a href="http://www.tandfonline.com/toc/tjde20/current">International Journal of Digital Earth</a> | 
 						<a href="http://www.journals.elsevier.com/pervasive-and-mobile-computing">Pervasive and Mobile Computing</a> | 
 						<a href="http://www.journals.elsevier.com/information-sciences">Information Sciences</a> |
