--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ involved in several research projects related to geospatial aspects in informati
 	</tr>
     	<tr>
 		<td>
-			2015-2017 | <a href="">Data Administration in Information Systems</a> (IST,MEIC)<br/>
+			2016-2017 | <a href="">Data Administration in Information Systems</a> (IST,MEIC)<br/>
 			2016-2017 | <a href="">Information Systems and Databases</a> (IST,MEEC,MEBiom)<br/>
 			2016-2017 | <a href="">Information Processing and Retrieval</a> (IST,MEIC,METI)<br/>
 			2016/2017 | <a href="">Information Retrieval</a> (IST,DEIC)<br/>
@@ -585,7 +585,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Reviewer in international journals: </strong>
-						<a href="http://toit.acm.org">ACM Transactions on Internet Technology</a>
+						<a href="http://toit.acm.org">ACM Transactions on Internet Technology</a> |
 						<a href="http://www.tandfonline.com/toc/tjde20/current">International Journal of Digital Earth</a> | 
 						<a href="http://www.journals.elsevier.com/pervasive-and-mobile-computing">Pervasive and Mobile Computing</a> | 
 						<a href="http://www.journals.elsevier.com/information-sciences">Information Sciences</a> |
