--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<title>Bruno Martins | Instituto Superior Técnico, University of Lisbon</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="Keywords" content="Bruno Martins, Technical University of Lisbon" />
 	<meta name="Description" content="Professor at Instituto Superior Técnico, University of Lisbon, Portugal." />
 	<link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
