--- a/index.html
+++ b/index.html
@@ -636,6 +636,9 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>						
 						<strong>M.Sc. evaluation comittees: </strong>
+						<a href="FEUP">Gil Rocha</a> |
+						<a href="FEUP">João Aires</a> |
+						<a href="FEUP">Ana Sousa</a> |
 						<a href="">Rita Curado</a> |
 						<a href="">Afonso Silva</a> |
 						<a href="">Daniel Baptista</a> |
