--- a/index.html
+++ b/index.html
@@ -621,6 +621,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>						
 						<strong>Ph.D. evaluation comittees: </strong>
+						<a href="">Pedro Saleiro</a> | 
 						<a href="https://sigarra.up.pt/feup/pt/fest_geral.cursos_list?pv_num_unico=201203581&pv_redirect_perc_acad=S">Manika Kar</a> | 
 						<a href="https://www.cisuc.uc.pt/people/show/235">Olga Craveiro</a> | 
 						<a href="http://www.eawag.ch/en/aboutus/portrait/organisation/staff/profile/luis-de-sousa/show/">Luís de Sousa</a> | 
