--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@ involved in several research projects related to geospatial aspects in informati
 		<td>
 			<h3>Postdoctoral Researchers</h3>
 			<ul>
-			<li>Miguel Won, <i>Analysing Political Discourse Through Text Mining Methods</i>, INESC-ID (<i>ongoing co-supervision with Prof. Pedro Magahães</i>)</li>
+			<li>Miguel Won, <i>Analysing Political Discourse Through Text Mining Methods</i>, INESC-ID (<i>ongoing co-supervision with Prof. Pedro Magalhães</i>)</li>
 			</ul>
 			<h3>PhD Students</h3>
 			<ul>
