--- a/index.html
+++ b/index.html
@@ -555,6 +555,15 @@ involved in several research projects related to geospatial aspects in informati
 				<tr>
 					<td>
 					<ul><li>
+						<strong>Member of editorial committees: </strong>
+						<a href="http://www.mdpi.com/journal/information/editors/">Information</a> |
+						<a href="http://www.springer.com/cda/content/document/cda_downloaddocument/SI_Environmental+and+Geospatial+Data+Analytics.pdf?SGWID=0-0-45-1578169-p177383280">International Journal of Data Science and Analytics - Special Issue on Environmental and Geospatial Data Analytics</a>
+					</li></ul>
+					</td>
+				</tr>
+				<tr>
+					<td>
+					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
 						<a href="http://cikm2016.cs.iupui.edu">CIKM'16</a> |
 						<a href="http://www.geo.uzh.ch/~rsp/gir16/">GIR'16</a> |
@@ -637,6 +646,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>						
 						<strong>M.Sc. evaluation comittees: </strong>
+						<a href="FCUL">André Correia</a> |
 						<a href="FEUP">Gil Rocha</a> |
 						<a href="FEUP">João Aires</a> |
 						<a href="FEUP">Ana Sousa</a> |
