--- a/index.html
+++ b/index.html
@@ -312,6 +312,7 @@ involved in several research projects related to geospatial aspects in informati
 			<h3>Conference and Workshop Papers</h3>
 
 			<ul>
+<li>Iman Mirrezaei, Bruno Martins, and Isabel F. Cruz <i>A Distantly Supervised Method for Extracting Spatio-Temporal Information from Text</i>, Proceedings of the ACM SIGSPATIAL International Conference on Advances in Geographic Information Systems, 2016</li>
 <li>Pedro Fialho, Ricardo Marques, Bruno Martins, Luísa Coheur and Paulo Quaresma, <i>Introducing INESC-ID@ASSIN for measuring semantic similarity and recognizing textual entailment</i>, Proceedings of the ASSIN Shared Task at the International Conference on the Computational Processing of Portuguese, 2016</li>
 <li>Tiago Gonçalves, Ana Paula Afonso and Bruno Martins, <i>Why not both? – Combining 2D maps and 3D space-time cubes for human trajectory data visualization</i>, Proceedings of the British Human Computer Interaction Conference, 2016</li>
 <li>Alexey Mazalov, Bruno Martins and David Matos, <i>Spatial Role Labeling with Convolutional Neural Networks</i>, Proceedings of the ACM Workshop on Geographic Information Retrieval, 2015 [<a href="http://dl.acm.org/citation.cfm?id=2837706">PDF</a>]</li>
@@ -647,6 +648,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>						
 						<strong>M.Sc. evaluation comittees: </strong>
+						<a href="FCUL">Carlos Santos</a> |
 						<a href="FCUL">André Correia</a> |
 						<a href="FEUP">Gil Rocha</a> |
 						<a href="FEUP">João Aires</a> |
