--- a/index.html
+++ b/index.html
@@ -124,6 +124,11 @@ involved in several research projects related to geospatial aspects in informati
 				</tr>
 				<tr>
 					<td>
+						<strong>Publons ID: </strong>publons.com/a/1180234/
+					</td>
+				</tr>				
+				<tr>
+					<td>
 						<strong>Mathematics Genealogy Project: </strong><a href="http://genealogy.math.ndsu.nodak.edu/id.php?id=132381">132381</a>
 					</td>
 				</tr>
@@ -165,11 +170,11 @@ involved in several research projects related to geospatial aspects in informati
 						<strong>GitHub: </strong><a href="https://github.com/bgmartins">https://github.com/bgmartins</a>
 					</td>
 				</tr>
-				<tr>
+				<!-- <tr>
 					<td>
 						<strong>DataJoy: </strong><a href="https://www.getdatajoy.com/user/568cf511d3247a2255716ff3">https://www.getdatajoy.com/user/568cf511d3247a2255716ff3</a>
 					</td>
-				</tr>
+				</tr> -->
 				<tr>
 					<td>&nbsp;</td>
 				</tr>
