--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ involved in several research projects related to geospatial aspects in informati
 				</tr>
 				<tr>
 					<td>
-						<strong>Publons ID: </strong>publons.com/a/1180234/
+						<strong>Publons ID: </strong><a href="http://publons.com/a/1180234/">publons.com/a/1180234/</a>
 					</td>
 				</tr>				
 				<tr>
