--- a/index.html
+++ b/index.html
@@ -604,6 +604,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Reviewer in international journals: </strong>
+						<a href="http://onlinelibrary.wiley.com/journal/10.1111/(ISSN)1467-9671">Transactions in GIS</a> |
 						<a href="http://www.josis.org">Journal of Spatial Information Science</a> |
 						<a href="http://toit.acm.org">ACM Transactions on Internet Technology</a> |
 						<a href="http://www.tandfonline.com/toc/tjde20/current">International Journal of Digital Earth</a> | 
