--- a/index.html
+++ b/index.html
@@ -535,6 +535,7 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Rodrigo Rodrigues, <a href="https://fenix.tecnico.ulisboa.pt/cursos/mebiom/dissertacao/846778572210581"><i>Adapting State-of-the-Art Named Entity Recognition and Disambiguation Frameworks for Handling Clinical Text</i></a>, IST, 2015 (<i>co-supervised with Dr. Paulo Zamith Nicola</i>)</li> <!-- 17 valores -->
 			<li>Vasco Ferreira, <a href=""><i>Using Textual Transcripts of Parliamentary Interventions for Profiling Portuguese Politicians</i></a>, IST, 2016 (<i>co-supervised with Prof. David Matos</i>)</li> <!-- 16 valores -->
 			<li>Joana Rocha, <a href=""><i>Resolving Named Entities and Relations in Text for Applications in Literary Studies</i></a>, IST, 2016 (<i>co-supervised with Prof. Pável Calado</i>)</li> <!-- 17 valores -->
+			<li>João Monteiro, <a href=""><i>Spatial Disaggregation Using Geo-Referenced Social Media Data as Ancillary Information</i></a>, IST, 2016 (<i>co-supervised with Prof. João Moura Pires</i>)</li> <!-- 19 valores -->
 			</ul>
 		</td>
     </tr>
