--- a/index.html
+++ b/index.html
@@ -536,6 +536,12 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Vasco Ferreira, <a href=""><i>Using Textual Transcripts of Parliamentary Interventions for Profiling Portuguese Politicians</i></a>, IST, 2016 (<i>co-supervised with Prof. David Matos</i>)</li> <!-- 16 valores -->
 			<li>Joana Rocha, <a href=""><i>Resolving Named Entities and Relations in Text for Applications in Literary Studies</i></a>, IST, 2016 (<i>co-supervised with Prof. Pável Calado</i>)</li> <!-- 17 valores -->
 			<li>João Monteiro, <a href=""><i>Spatial Disaggregation Using Geo-Referenced Social Media Data as Ancillary Information</i></a>, IST, 2016 (<i>co-supervised with Prof. João Moura Pires</i>)</li> <!-- 19 valores -->
+			<li>Joao Violante, <a href=""><i>Sentiment Analysis with Deep Neural Networks</i></a>, IST, 2016 (<i>co-supervised with Prof. Pável Calado</i>)</li> <!-- 16 valores -->
+			<li>Filipe Silva, <a href=""><i>Computational Detection of Irony in Textual Messages</i></a>, IST, 2016 (<i>co-supervised with Prof. David Matos</i>)</li> <!-- 16 valores -->
+			<li>Jorge Oliveira, <a href=""><i>Event Recommendation</i></a>, IST, 2016 (<i>co-supervised with Prof. Pável Calado</i>)</li> <!-- 16 valores -->
+			<li>Alexey Mazalov, <a href=""><i>Spatial role labeling with convolutional neural networks</i></a>, IST, 2016 (<i>co-supervised with Prof. David Matos</i>)</li> <!-- 16 valores -->
+			<li>José Raposo, <a href=""><i>Open Information Extraction from Dialogue Transcriptions</i></a>, IST, 2016 (<i>co-supervised with Prof. David Matos</i>)</li> <!-- 16 valores -->
+			<li>Ricardo Lavareda, <a href=""><i>Entity Linking over Short Texts</i></a>, IST, 2016 (<i>co-supervised with Prof. Pável Calado</i>)</li> <!-- 16 valores -->
 			</ul>
 		</td>
     </tr>
@@ -572,6 +578,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="https://dh2017.adho.org">DH'17</a>
 						<a href="https://agile-online.org/index.php/conference/conference-2017">AGILE'17</a> |
 						<a href="https://ornlcda.github.io/SWM2017/">SWM'17</a> |
 						<a href="http://ecir2017.org">ECIR'17</a> |
