--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
-						<a href="https://dh2017.adho.org">DH'17</a>
+						<a href="https://dh2017.adho.org">DH'17</a> |
 						<a href="https://agile-online.org/index.php/conference/conference-2017">AGILE'17</a> |
 						<a href="https://ornlcda.github.io/SWM2017/">SWM'17</a> |
 						<a href="http://ecir2017.org">ECIR'17</a> |
