--- a/index.html
+++ b/index.html
@@ -536,9 +536,9 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Vasco Ferreira, <a href=""><i>Using Textual Transcripts of Parliamentary Interventions for Profiling Portuguese Politicians</i></a>, IST, 2016 (<i>co-supervised with Prof. David Matos</i>)</li> <!-- 16 valores -->
 			<li>Joana Rocha, <a href=""><i>Resolving Named Entities and Relations in Text for Applications in Literary Studies</i></a>, IST, 2016 (<i>co-supervised with Prof. Pável Calado</i>)</li> <!-- 17 valores -->
 			<li>João Monteiro, <a href=""><i>Spatial Disaggregation Using Geo-Referenced Social Media Data as Ancillary Information</i></a>, IST, 2016 (<i>co-supervised with Prof. João Moura Pires</i>)</li> <!-- 19 valores -->
-			<li>Joao Violante, <a href=""><i>Sentiment Analysis with Deep Neural Networks</i></a>, IST, 2016 (<i>co-supervised with Prof. Pável Calado</i>)</li> <!-- 16 valores -->
-			<li>Filipe Silva, <a href=""><i>Computational Detection of Irony in Textual Messages</i></a>, IST, 2016 (<i>co-supervised with Prof. David Matos</i>)</li> <!-- 16 valores -->
-			<li>Jorge Oliveira, <a href=""><i>Event Recommendation</i></a>, IST, 2016 (<i>co-supervised with Prof. Pável Calado</i>)</li> <!-- 16 valores -->
+			<li>Joao Violante, <a href=""><i>Sentiment Analysis with Deep Neural Networks</i></a>, IST, 2016 (<i>co-supervised with Prof. Pável Calado</i>)</li> <!-- 17 valores -->
+			<li>Filipe Silva, <a href=""><i>Computational Detection of Irony in Textual Messages</i></a>, IST, 2016 (<i>co-supervised with Prof. David Matos</i>)</li> <!-- 17 valores -->
+			<li>Jorge Oliveira, <a href=""><i>Event Recommendation</i></a>, IST, 2016 (<i>co-supervised with Prof. Pável Calado</i>)</li> <!-- 17 valores -->
 			<li>Alexey Mazalov, <a href=""><i>Spatial role labeling with convolutional neural networks</i></a>, IST, 2016 (<i>co-supervised with Prof. David Matos</i>)</li> <!-- 16 valores -->
 			<li>José Raposo, <a href=""><i>Open Information Extraction from Dialogue Transcriptions</i></a>, IST, 2016 (<i>co-supervised with Prof. David Matos</i>)</li> <!-- 16 valores -->
 			<li>Ricardo Lavareda, <a href=""><i>Entity Linking over Short Texts</i></a>, IST, 2016 (<i>co-supervised with Prof. Pável Calado</i>)</li> <!-- 16 valores -->
@@ -557,6 +557,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of organization committees: </strong>
+						<a href="">TeMA'17</a> |
 						<a href="http://lxmls.it.pt/">LxMLS'16</a> |
 						<a href="http://dhere.de/locweb2016/">LocWeb'16</a> |
 						<a href="http://emnlp2015.emnlp.org/">EMNLP'15</a> |
@@ -578,6 +579,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="http://2017.jcdl.org">JCDL'17</a> |
 						<a href="https://dh2017.adho.org">DH'17</a> |
 						<a href="https://agile-online.org/index.php/conference/conference-2017">AGILE'17</a> |
 						<a href="https://ornlcda.github.io/SWM2017/">SWM'17</a> |
@@ -666,6 +668,9 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>						
 						<strong>M.Sc. evaluation comittees: </strong>
+						<a href="">João Caramujo</a> |
+						<a href="">Joana Gomes</a> |
+						<a href="">Tiago Santos</a> |
 						<a href="FCUL">Carlos Santos</a> |
 						<a href="FCUL">André Correia</a> |
 						<a href="FEUP">Gil Rocha</a> |
