--- a/index.html
+++ b/index.html
@@ -557,6 +557,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of organization committees: </strong>
+						<a href="http://lxmls.it.pt/">LxMLS'17</a> |
 						<a href="">TeMA'17</a> |
 						<a href="http://lxmls.it.pt/">LxMLS'16</a> |
 						<a href="http://dhere.de/locweb2016/">LocWeb'16</a> |
