--- a/index.html
+++ b/index.html
@@ -214,11 +214,11 @@ involved in several research projects related to geospatial aspects in informati
 	</tr>
     	<tr>
 		<td>
-			2016-2017 | <a href="">Data Administration in Information Systems</a> (IST,MEIC)<br/>
-			2016-2017 | <a href="">Information Systems and Databases</a> (IST,MEEC,MEBiom)<br/>
-			2016-2017 | <a href="">Information Processing and Retrieval</a> (IST,MEIC,METI)<br/>
-			2016/2017 | <a href="">Information Retrieval</a> (IST,DEIC)<br/>
-			2016/2017 | <a href="">Research Topics</a> (IST,DEIC)<br/>
+			2016-2017 | <a href="">Data Administration in Information Systems</a> (IST,MEIC,METI)<br/>
+			2016-2017 | <a href="">Biomedical Informatics</a> (IST,MEIC,MEBiom)<br/>
+			2016-2017 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/PRI25179/2016-2017/1-semestre">Information Processing and Retrieval</a> (IST,MEIC,METI)<br/>
+			2016/2017 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/RInf9/2016-2017/1-semestre">Information Retrieval</a> (IST,DEIC)<br/>
+			2016/2017 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/TInv9/2016-2017/1-semestre">Research Topics</a> (IST,DEIC)<br/>
 			2015-2016 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/SIBD51113/2015-2016/2-semestre">Information Systems and Databases</a> (IST,LEGI)<br/>
 			2015-2016 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/AOBD101113/2015-2016/2-semestre">Data Administration in Information Systems</a> (IST,MEIC,METI)<br/>
 			2015-2016 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/TInv/2015-2016/1-semestre">Research Topics</a> (IST,DEIC)<br/>
