--- a/index.html
+++ b/index.html
@@ -580,6 +580,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="http://dhere.de/locweb2017/">LocWeb'17</a> |
 						<a href="http://2017.jcdl.org">JCDL'17</a> |
 						<a href="https://dh2017.adho.org">DH'17</a> |
 						<a href="https://agile-online.org/index.php/conference/conference-2017">AGILE'17</a> |
