--- a/index.html
+++ b/index.html
@@ -455,6 +455,7 @@ involved in several research projects related to geospatial aspects in informati
     <tr>
 		<td>
 			<ul>
+<li>Reassembling the Republic of Letters (COST ACTION IS1310)</li>
 <li>Da monitorização de fluxos de dados globais à recomendação com base em contexto (GoLocal - FCT CMUP­ERI/TIC/0046/2014)</li>
 <li>Armazenamento e Processamento de Quantidades Massivas de Dados Espaço-Temporais na Nuvem (Saturn - FCT PTDC/EEI-SCR/1743/2014)</li>
 <li>Expression and Recognition of Irony in Multicultural Social Media (EXPRESS - FCT UTAP­EXPL/EEI­ESS/0031/2014)</li>
@@ -654,7 +655,8 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>						
 						<strong>Ph.D. evaluation comittees: </strong>
-						<a href="">Pedro Saleiro</a> | 
+						<a href="https://www.researchgate.net/profile/Ricardo_Malheiro3">Pedro Saleiro</a> | 
+						<a href="">Ricardo Malheiro</a> | 
 						<a href="https://sigarra.up.pt/feup/pt/fest_geral.cursos_list?pv_num_unico=201203581&pv_redirect_perc_acad=S">Manika Kar</a> | 
 						<a href="https://www.cisuc.uc.pt/people/show/235">Olga Craveiro</a> | 
 						<a href="http://www.eawag.ch/en/aboutus/portrait/organisation/staff/profile/luis-de-sousa/show/">Luís de Sousa</a> | 
