--- a/index.html
+++ b/index.html
@@ -581,6 +581,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="http://www.efita2017.org/">EFITA'17</a> |
 						<a href="http://www.tpdl.eu/tpdl2017/">TPDL'17</a> |
 						<a href="http://dhere.de/locweb2017/">LocWeb'17</a> |
 						<a href="http://2017.jcdl.org">JCDL'17</a> |
