--- a/index.html
+++ b/index.html
@@ -620,6 +620,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Reviewer in international journals: </strong>
+						<a href="http://onlinelibrary.wiley.com/journal/10.1111/(ISSN)1468-0394">Expert Systems</a> |						
 						<a href="http://onlinelibrary.wiley.com/journal/10.1111/(ISSN)1467-9671">Transactions in GIS</a> |
 						<a href="http://www.josis.org">Journal of Spatial Information Science</a> |
 						<a href="http://toit.acm.org">ACM Transactions on Internet Technology</a> |
