--- a/index.html
+++ b/index.html
@@ -534,15 +534,15 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Ricardo Marques, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-t/dissertacao/1128253548920908"><i>Detecting contradictions in news quotations</i></a>, IST, 2015 (<i>co-supervised with Prof. Pável Calado</i>)</li>
 			<li>Jorge Almeida, <a href="https://fenix.tecnico.ulisboa.pt/cursos/meic-t/dissertacao/565303595500650"><i>Personalized Food Recommendation Exploring Content-Based Methods</i></a>, IST, 2015 (<i>co-supervised with Prof. Pável Calado</i>)</li>
 			<li>Rodrigo Rodrigues, <a href="https://fenix.tecnico.ulisboa.pt/cursos/mebiom/dissertacao/846778572210581"><i>Adapting State-of-the-Art Named Entity Recognition and Disambiguation Frameworks for Handling Clinical Text</i></a>, IST, 2015 (<i>co-supervised with Dr. Paulo Zamith Nicola</i>)</li> <!-- 17 valores -->
-			<li>Vasco Ferreira, <a href=""><i>Using Textual Transcripts of Parliamentary Interventions for Profiling Portuguese Politicians</i></a>, IST, 2016 (<i>co-supervised with Prof. David Matos</i>)</li> <!-- 16 valores -->
-			<li>Joana Rocha, <a href=""><i>Resolving Named Entities and Relations in Text for Applications in Literary Studies</i></a>, IST, 2016 (<i>co-supervised with Prof. Pável Calado</i>)</li> <!-- 17 valores -->
-			<li>João Monteiro, <a href=""><i>Spatial Disaggregation Using Geo-Referenced Social Media Data as Ancillary Information</i></a>, IST, 2016 (<i>co-supervised with Prof. João Moura Pires</i>)</li> <!-- 19 valores -->
-			<li>Joao Violante, <a href=""><i>Sentiment Analysis with Deep Neural Networks</i></a>, IST, 2016 (<i>co-supervised with Prof. Pável Calado</i>)</li> <!-- 17 valores -->
-			<li>Filipe Silva, <a href=""><i>Computational Detection of Irony in Textual Messages</i></a>, IST, 2016 (<i>co-supervised with Prof. David Matos</i>)</li> <!-- 17 valores -->
-			<li>Jorge Oliveira, <a href=""><i>Event Recommendation</i></a>, IST, 2016 (<i>co-supervised with Prof. Pável Calado</i>)</li> <!-- 17 valores -->
-			<li>Alexey Mazalov, <a href=""><i>Spatial role labeling with convolutional neural networks</i></a>, IST, 2016 (<i>co-supervised with Prof. David Matos</i>)</li> <!-- 16 valores -->
-			<li>José Raposo, <a href=""><i>Open Information Extraction from Dialogue Transcriptions</i></a>, IST, 2016 (<i>co-supervised with Prof. David Matos</i>)</li> <!-- 16 valores -->
-			<li>Ricardo Lavareda, <a href=""><i>Entity Linking over Short Texts</i></a>, IST, 2016 (<i>co-supervised with Prof. Pável Calado</i>)</li> <!-- 16 valores -->
+			<li>Vasco Ferreira, <a href="https://fenix.tecnico.ulisboa.pt/departamentos/dei/dissertacao/283828618789640"><i>Using Textual Transcripts of Parliamentary Interventions for Profiling Portuguese Politicians</i></a>, IST, 2016 (<i>co-supervised with Prof. David Matos</i>)</li> <!-- 16 valores -->
+			<li>Joana Rocha, <a href="https://fenix.tecnico.ulisboa.pt/departamentos/dei/dissertacao/283828618789656"><i>Resolving Named Entities and Relations in Text for Applications in Literary Studies</i></a>, IST, 2016 (<i>co-supervised with Prof. Pável Calado</i>)</li> <!-- 17 valores -->
+			<li>João Monteiro, <a href="https://fenix.tecnico.ulisboa.pt/departamentos/dei/dissertacao/1691203502342575"><i>Spatial Disaggregation Using Geo-Referenced Social Media Data as Ancillary Information</i></a>, IST, 2016 (<i>co-supervised with Prof. João Moura Pires</i>)</li> <!-- 19 valores -->
+			<li>Joao Violante, <a href="https://fenix.tecnico.ulisboa.pt/departamentos/dei/dissertacao/565303595500903"><i>Sentiment Analysis with Deep Neural Networks</i></a>, IST, 2016 (<i>co-supervised with Prof. Pável Calado</i>)</li> <!-- 17 valores -->
+			<li>Filipe Silva, <a href="https://fenix.tecnico.ulisboa.pt/departamentos/dei/dissertacao/1972678479053106"><i>Computational Detection of Irony in Textual Messages</i></a>, IST, 2016 (<i>co-supervised with Prof. David Matos</i>)</li> <!-- 17 valores -->
+			<li>Jorge Oliveira, <a href="https://fenix.tecnico.ulisboa.pt/departamentos/dei/dissertacao/565303595500839"><i>Event Recommendation</i></a>, IST, 2016 (<i>co-supervised with Prof. Pável Calado</i>)</li> <!-- 17 valores -->
+			<li>Alexey Mazalov, <a href="https://fenix.tecnico.ulisboa.pt/departamentos/dei/dissertacao/1972678479053259"><i>Spatial role labeling with convolutional neural networks</i></a>, IST, 2016 (<i>co-supervised with Prof. David Matos</i>)</li> <!-- 16 valores -->
+			<li>José Raposo, <a href="https://fenix.tecnico.ulisboa.pt/departamentos/dei/dissertacao/283828618789894"><i>Open Information Extraction from Dialogue Transcriptions</i></a>, IST, 2016 (<i>co-supervised with Prof. David Matos</i>)</li> <!-- 16 valores -->
+			<li>Ricardo Lavareda, <a href="https://fenix.tecnico.ulisboa.pt/departamentos/dei/dissertacao/1972678479053080"><i>Entity Linking over Short Texts</i></a>, IST, 2016 (<i>co-supervised with Prof. Pável Calado</i>)</li> <!-- 16 valores -->
 			</ul>
 		</td>
     </tr>
