--- a/index.html
+++ b/index.html
@@ -544,8 +544,8 @@ involved in several research projects related to geospatial aspects in informati
 			<li>José Raposo, <a href="https://fenix.tecnico.ulisboa.pt/departamentos/dei/dissertacao/283828618789894"><i>Open Information Extraction from Dialogue Transcriptions</i></a>, IST, 2016 (<i>co-supervised with Prof. David Matos</i>)</li> <!-- 16 valores -->
 			<li>Ricardo Lavareda, <a href="https://fenix.tecnico.ulisboa.pt/departamentos/dei/dissertacao/1972678479053080"><i>Entity Linking over Short Texts</i></a>, IST, 2016 (<i>co-supervised with Prof. Pável Calado</i>)</li> <!-- 16 valores -->
 			<li>Diogo Andrade, <a href=""><i>IPSentinel e OGC - Infra-estrutura Portuguesa para dados Sentinel e Acesso a Dados através de Protocolos OGC</i></a>, IST, 2017 (<i>co-supervised with Prof. Mário Silva</i>)</li> <!-- ?? valores -->
-			<li>Francisco Carreira, <a href=""><i>Extracção de Palavras Chave e Caracterização Geo-Temporal da sua Ocorrência</i></a>, IST, 2017 (<i>co-supervised with Dr. Miguwl Won</i>)</li> <!-- ?? valores -->
-			<li>Ricardo Custódio, <a href=""><i>Resolução de nomes de locais em documentos de texto</i></a>, IST, 2017 (<i>co-supervised with Dr. Miguwl Won</i>)</li> <!-- ?? valores -->
+			<li>Francisco Carreira, <a href=""><i>Extracção de Palavras Chave e Caracterização Geo-Temporal da sua Ocorrência</i></a>, IST, 2017 (<i>co-supervised with Dr. Miguel Won</i>)</li> <!-- ?? valores -->
+			<li>Ricardo Custódio, <a href=""><i>Resolução de nomes de locais em documentos de texto</i></a>, IST, 2017 (<i>co-supervised with Dr. Miguel Won</i>)</li> <!-- ?? valores -->
 			<li>Carlos Ribeiro, <a href=""><i>Aprendizagem automática distribuída para análise de dados geo-espaciais e/ou geo-temporais</i></a>, IST, 2017 (<i>co-supervised with Prof. Paolo Romano</i>)</li> <!-- ?? valores -->
 			<li>Rui Figueira, <a href=""><i>Datação Automática de Documentos Textuais</i></a>, IST, 2017 (<i>co-supervised with Dr. Daniel Gomes</i>)</li> <!-- ?? valores -->
 			<li>Mauro Teles, <a href=""><i>Geocodificação e Datação Automática de Obras Musicais com Base no Conteúdo Audio</i></a>, IST, 2017 (<i>co-supervised with Prof. David Matos</i>)</li> <!-- ?? valores -->
