--- a/index.html
+++ b/index.html
@@ -592,6 +592,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="http://www.graphicslink.co.uk/IV2017/GVA.htm">IV-GVA 2017</a> |
 						<a href="http://sphinxworkshop.org">SPHINx 2017</a> |
 						<a href="https://wosp.core.ac.uk/jcdl2017/">WOSP'17</a> |
 						<a href="http://ijcai-17.org">IJCAI'17</a> |
